Testing GitHub Actions CI for MATLAB Interface on Mac.

--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -41,7 +41,7 @@ jobs:
     name: AMD64 Ubuntu 20.04 MATLAB
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
+      - name: Check out repository        
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -60,6 +60,24 @@ jobs:
           # errors will occur. To work around this issue, we can explicitly
           # force MATLAB to use the system libstdc++.so via LD_PRELOAD.
           LD_PRELOAD: /usr/lib/x86_64-linux-gnu/libstdc++.so.6
+        uses: matlab-actions/run-tests@v1
+        with:
+          select-by-folder: matlab/test
+          
+    name: AMD64 MacOS 10.15 MATLAB
+    runs-on: macos-latest
+    steps:
+      - name: Check out repository        
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Install ninja-build
+        run: sudo apt-get install ninja-build
+      - name: Install MATLAB
+        uses: matlab-actions/setup-matlab@v0
+      - name: Build MATLAB Interface
+        run: ci/scripts/matlab_build.sh $(pwd)
+      - name: Run MATLAB Tests
         uses: matlab-actions/run-tests@v1
         with:
           select-by-folder: matlab/test
