--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install ninja-build
-        run: sudo apt-get install ninja-build
+        run: brew install ninja
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v0
       - name: Build MATLAB Interface
