--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -82,6 +82,10 @@ jobs:
       - name: Build MATLAB Interface
         run: ci/scripts/matlab_build.sh $(pwd)
       - name: Run MATLAB Tests
+        env:
+          # Add the installation directory to the MATLAB Search Path by
+          # setting the MATLABPATH environment variable.
+          MATLABPATH: matlab/install/arrow_matlab
         uses: matlab-actions/run-tests@v1
         with:
           select-by-folder: matlab/test
@@ -100,6 +104,10 @@ jobs:
       - name: Build MATLAB Interface
         run: ci/scripts/matlab_build.sh $(pwd)
       - name: Run MATLAB Tests
+        env:
+          # Add the installation directory to the MATLAB Search Path by
+          # setting the MATLABPATH environment variable.
+          MATLABPATH: matlab/install/arrow_matlab
         uses: matlab-actions/run-tests@v1
         with:
           select-by-folder: matlab/test
