--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -107,7 +107,7 @@ jobs:
         env:
           # Add the installation directory to the MATLAB Search Path by
           # setting the MATLABPATH environment variable.
-          MATLABPATH: matlab/install/arrow_matlab
+          MATLABPATH: matlab\install\arrow_matlab
         uses: matlab-actions/run-tests@v1
         with:
           select-by-folder: matlab/test
