--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -102,6 +102,7 @@ jobs:
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v1
       - name: Build MATLAB Interface
+        shell: bash
         run: ci/scripts/matlab_build.sh $(pwd)
       - name: Run MATLAB Tests
         env:
