using bash, print the platform variable value for WIN32 and UNIX

--- a/matlab/CMakeLists.txt
+++ b/matlab/CMakeLists.txt
@@ -17,6 +17,9 @@
 
 cmake_minimum_required(VERSION 3.20)
 
+message(STATUS "*****************************************WIN32: ${WIN32}")
+message(STATUS "*****************************************UNIX: ${UNIX}")
+
 # Build the Arrow C++ libraries.
 function(build_arrow)
   set(options BUILD_GTEST)
