Add quotation marks around vcvarsall.bat file command

--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v1
       - name: Run vcvarsall.bat
-        run: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat
+        run: "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
       - name: Build MATLAB Interface
         env:
           CMAKE_C_COMPILER: cl.exe
