--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -103,7 +103,7 @@ jobs:
         uses: matlab-actions/setup-matlab@v1
       - name: Run vcvarsall.bat
         shell: cmd
-        run: "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        run: "C:\Program Files\ (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
       - name: Build MATLAB Interface
         env:
           CMAKE_C_COMPILER: cl.exe
