--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -102,8 +102,8 @@ jobs:
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v1
       - name: Run vcvarsall.bat
-        shell: cmd
-        run: "C:\Program Files\ (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        shell: pwsh
+        run: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
       - name: Build MATLAB Interface
         env:
           CMAKE_C_COMPILER: cl.exe
