--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v1
         with:
-          release: R2021a
+          release: R2021b
       - name: Build MATLAB Interface
         run: ci/scripts/matlab_build.sh $(pwd)
       - name: Run MATLAB Tests
