--- a/matlab/CMakeLists.txt
+++ b/matlab/CMakeLists.txt
@@ -282,7 +282,8 @@ set(CPP_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/cpp)
 set(MATLAB_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/cpp/arrow/matlab)
 
 set(arrow_matlab_sources
-    mex/mex_util.cc
+    # mex/mex_util.cc
+    mex/mex_util_cxx.cc
     feather/feather_reader.cc
     feather/feather_writer.cc
     feather/feather_functions.cc
@@ -299,7 +300,6 @@ target_link_libraries(arrow_matlab arrow_shared)
 target_link_libraries(arrow_matlab ${Matlab_MX_LIBRARY})
 target_link_libraries(arrow_matlab ${Matlab_MEX_LIBRARY})
 target_link_libraries(arrow_matlab ${Matlab_DATAARRAY_LIBRARY})
-# target_link_libraries(arrow_matlab ${Matlab_ENGINE_LIBRARY})
 
 # Include the MATLAB MEX headers.
 target_include_directories(arrow_matlab PRIVATE ${Matlab_INCLUDE_DIRS})
