--- a/matlab/CMakeLists.txt
+++ b/matlab/CMakeLists.txt
@@ -284,12 +284,13 @@ set(MATLAB_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/cpp/arrow/matlab)
 set(arrow_matlab_sources
     # mex/mex_util.cc
     mex/mex_util_cxx.cc
-    # feather/feather_reader.cc
+    # feather/feather_reader_cxx.cc
     # feather/feather_writer.cc
     # feather/feather_functions.cc
     # feather/feather_functions_cxx.cc
     # feather/util/handle_status.cc
     # feather/util/unicode_conversion.cc
+    mex/MatlabPtr.cc
     )
 list(TRANSFORM arrow_matlab_sources PREPEND ${CPP_SOURCE_DIR}/arrow/matlab/)
 
@@ -302,7 +303,7 @@ target_link_libraries(arrow_matlab arrow_shared)
 # target_link_libraries(arrow_matlab ${Matlab_MX_LIBRARY})
 target_link_libraries(arrow_matlab ${Matlab_MEX_LIBRARY})
 target_link_libraries(arrow_matlab ${Matlab_DATAARRAY_LIBRARY})
-target_link_libraries(arrow_matlab ${Matlab_ENGINE_LIBRARY})
+# target_link_libraries(arrow_matlab ${Matlab_ENGINE_LIBRARY})
 
 # Include the MATLAB MEX headers.
 target_include_directories(arrow_matlab PRIVATE ${Matlab_INCLUDE_DIRS})
