--- a/dev/tasks/r/github.macos.autobrew.yml
+++ b/dev/tasks/r/github.macos.autobrew.yml
@@ -31,7 +31,7 @@ jobs:
           cd arrow/r
           # Put the formula inside r/ so that it's included in the package build
           cp ../dev/tasks/homebrew-formulae/autobrew/apache-arrow.rb tools/apache-arrow.rb
-          # Pin the current commit in the formula to test so that we're not always pulling from master
+          # Pin the current commit in the formula to test so that we're not always pulling from the tip of the default branch
           sed -i.bak -E -e 's@https://github.com/apache/arrow.git"$@{{ arrow.remote }}.git", :revision => "{{ arrow.head }}"@' tools/apache-arrow.rb && rm -f tools/apache-arrow.rb.bak
           # Sometimes crossbow gives a remote URL with .git and sometimes not. Make sure there's only one
           sed -i.bak -E -e 's@.git.git@.git@' tools/apache-arrow.rb && rm -f tools/apache-arrow.rb.bak
