Add steps which print debug output for verifying crossbow Target object properties (e.g. arrow.branch).
Co-authored-by: Fiona La <fionala7@gmail.com>

--- a/dev/tasks/docker-tests/github.linux.yml
+++ b/dev/tasks/docker-tests/github.linux.yml
@@ -66,6 +66,18 @@ jobs:
           name: test-output
           path: arrow/r/check/arrow.Rcheck/tests/testthat.Rout*
           if-no-files-found: ignore
+      - name: Print macros.is_default_branch()
+        run: echo "macros.is_default_branch() = {{ macros.is_default_branch() }}"
+      - name: Print arrow.branch
+        run: echo "arrow.branch = {{ arrow.branch }}"
+      - name: Print arrow.default branch
+        run: echo "arrow.default_branch = {{ arrow.default_branch }}"
+      - name: Print arrow.head
+        run: echo "arrow.head = {{ arrow.head }}"
+      - name: Print arrow.remote
+        run: echo "arrow.remote = {{ arrow.remote }}"
+      - name: Print arrow.email
+        run: echo "arrow.email = {{ arrow.email }}"
 
     {% if macros.is_default_branch() %}
       {{ macros.github_login_dockerhub()|indent }}
