Print out default_branch property for debugging.
Co-authored-by: Fiona La <fionala7@gmail.com>

--- a/dev/tasks/docker-tests/github.linux.yml
+++ b/dev/tasks/docker-tests/github.linux.yml
@@ -66,8 +66,8 @@ jobs:
           name: test-output
           path: arrow/r/check/arrow.Rcheck/tests/testthat.Rout*
           if-no-files-found: ignore
-      - name: Print macros.is_default_branch()
-        run: echo "macros.is_default_branch() = {{ macros.is_default_branch() }}"
+      - name: Print arrow.default_branch
+        run: echo "arrow.default_branch = {{ arrow.default_branch }}"
       - name: Print arrow.branch
         run: echo "arrow.branch = {{ arrow.branch }}"
       - name: Print arrow.head
